--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot deployed on Render",
+  "description": "A Telegram bot running on Render",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.1"
+    "dotenv": "^16.0.3",
+    "node-fetch": "^2.6.7",
+    "telegraf": "^4.12.2"
   }
 }
